--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "underscore":"^1.8.3"
+    "pg": "^4.4.1",
+    "pg-hstore": "^2.3.2",
+    "underscore": "^1.8.3"
   }
 }
