--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "pg": "^4.4.1",
     "pg-hstore": "^2.3.2",
     "underscore": "^1.8.3",
-     "sequelize": "^3.5.1",
-    "sqlite3": "^3.0.10",
+    "sequelize": "^3.5.1",
+    "sqlite3": "^3.0.10"
   }
 }
